@@ -32,6 +32,12 @@
 	* Added a dns: URI protocol handler, with LDAP URI-inspired
 	query part.
 
+	* The --no-handler option now takes a regex argument which
+	is matched against SERVER_SOFTWARE. This makes it possible
+	to use both Apache and Lighttpd with the same ESXX server
+	by specifying "--no-handler=lighttpd.*".
+	
+
 0.9.20081101
 	* Bug fixes as usual.
 
